[gd_scene load_steps=11 format=3 uid="uid://cxok4bvmaau5m"]

[ext_resource type="Script" path="res://scripts/skill.gd" id="1_0d7bc"]
[ext_resource type="Texture2D" uid="uid://n414uyf666t8" path="res://Sprites/Icons/iconography.png" id="2_lmxil"]
[ext_resource type="Texture2D" uid="uid://bmnj2sfend6yy" path="res://Sprites/Icons/token_add.png" id="2_slyfc"]
[ext_resource type="Texture2D" uid="uid://d2s552sxm3o28" path="res://Sprites/Icons/token_subtract.png" id="3_7ahbf"]
[ext_resource type="Texture2D" uid="uid://cneue66sphgl" path="res://Sprites/Icons/notepad.png" id="3_7dgd0"]
[ext_resource type="Texture2D" uid="uid://d4a3an16akwhm" path="res://Sprites/Icons/cursor_top_down.png" id="6_4tpkp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0up75"]
atlas = ExtResource("2_lmxil")
region = Rect2(2886, 2184, 292, 293)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5n5w"]
atlas = ExtResource("2_lmxil")
region = Rect2(2216, 2207, 312, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_c348l"]
atlas = ExtResource("2_lmxil")
region = Rect2(2886, 2184, 292, 293)

[sub_resource type="LabelSettings" id="LabelSettings_xnndv"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="skill" type="HBoxContainer" node_paths=PackedStringArray("points", "buttons", "name_label", "edit_label", "edit_button", "_delete_button", "skill_name", "color_picker_button", "drag_button")]
offset_right = 284.0
offset_bottom = 24.0
size_flags_horizontal = 3
theme_override_constants/separation = 0
script = ExtResource("1_0d7bc")
points = NodePath("points")
buttons = NodePath("skill_name/buttons")
name_label = NodePath("skill_name/name")
edit_label = NodePath("skill_name/edit_skill")
edit_button = NodePath("skill_name/edit_holder/edit_button")
_delete_button = NodePath("skill_name/delete_holder/delete_button")
skill_name = NodePath("skill_name")
color_picker_button = NodePath("skill_name/color_picker_holder/color_picker_button")
drag_button = NodePath("drag_button_holder/drag_button")
cross = SubResource("AtlasTexture_0up75")
check = SubResource("AtlasTexture_k5n5w")

[node name="skill_name" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="delete_holder" type="MarginContainer" parent="skill_name"]
texture_filter = 2
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
focus_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="delete_button" type="TextureButton" parent="skill_name/delete_holder"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.823529, 0, 0, 1)
texture_filter = 2
layout_mode = 2
texture_normal = SubResource("AtlasTexture_c348l")
ignore_texture_size = true
stretch_mode = 5

[node name="edit_holder" type="MarginContainer" parent="skill_name"]
texture_filter = 2
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
focus_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="edit_button" type="TextureButton" parent="skill_name/edit_holder"]
modulate = Color(1, 1, 1, 0)
texture_filter = 2
layout_mode = 2
texture_normal = ExtResource("3_7dgd0")
ignore_texture_size = true
stretch_mode = 5

[node name="color_picker_holder" type="MarginContainer" parent="skill_name"]
texture_filter = 2
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
focus_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="color_picker_button" type="ColorPickerButton" parent="skill_name/color_picker_holder"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
edit_alpha = false

[node name="name" type="Label" parent="skill_name"]
layout_mode = 2
size_flags_horizontal = 3
text = "Навык"
label_settings = SubResource("LabelSettings_xnndv")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="edit_skill" type="LineEdit" parent="skill_name"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2
mouse_default_cursor_shape = 0
theme_override_font_sizes/font_size = 14
max_length = 14
expand_to_text_length = true
select_all_on_focus = true
caret_blink = true

[node name="buttons" type="HBoxContainer" parent="skill_name"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="add_point" type="TextureButton" parent="skill_name/buttons"]
texture_filter = 2
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture_normal = ExtResource("2_slyfc")
ignore_texture_size = true
stretch_mode = 5

[node name="substract_point" type="TextureButton" parent="skill_name/buttons"]
texture_filter = 2
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture_normal = ExtResource("3_7ahbf")
ignore_texture_size = true
stretch_mode = 5

[node name="points" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
alignment = 1

[node name="drag_button_holder" type="MarginContainer" parent="."]
texture_filter = 2
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
focus_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="drag_button" type="TextureButton" parent="drag_button_holder"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture_normal = ExtResource("6_4tpkp")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="skill_name/delete_holder/delete_button" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="skill_name/edit_holder/edit_button" to="." method="set_edit"]
[connection signal="color_changed" from="skill_name/color_picker_holder/color_picker_button" to="." method="_color_changed"]
[connection signal="text_submitted" from="skill_name/edit_skill" to="." method="_on_edit_skill_text_submitted"]
[connection signal="pressed" from="skill_name/buttons/add_point" to="." method="_on_add_point_pressed"]
[connection signal="pressed" from="skill_name/buttons/substract_point" to="." method="_on_substract_point_pressed"]
[connection signal="gui_input" from="drag_button_holder/drag_button" to="." method="_on_drag_button_gui_input"]
